# code_area_template

./: .lintignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  cases.cpp  check_formatting.sh  check_statically.sh  format.sh  format_check.sh  lint.sh  solution.cpp  unit_tests.sh
sources/: hello.cpp  hello.h  prime_number.cpp  prime_number_test.cpp
sources/ali_and_helping_innocent_people/: ali_and_helping_innocent_people.cpp  ali_and_helping_innocent_people.h  tests.cpp
sources/almond_problem/: almond_problem.cpp  almond_problem.h  tests.cpp
sources/anagrams/: anagrams.cpp  anagrams.h  tests.cpp
sources/annoying-chemistry/: annoying_chemistry.cpp  annoying_chemistry.h  tests.cpp
sources/battleship_field_validator/: battleship_field_validator.cpp  battleship_field_validator.h  tests.cpp
sources/binary_search/: binary_search.cpp  binary_search.h  tests.cpp
sources/book_of_potion_making/: book_of_potion_making.cpp  book_of_potion_making.h  tests.cpp
sources/bricks_game/: bricks_game.cpp  bricks_game.h  tests.cpp
sources/check_string_permutation/: README.md  check_string_permutation.cpp  check_string_permutation.h  tests.cpp
sources/common_denominators/: common_denominators.h  tests.cpp
sources/cost_of_balloons/: cost_of_balloons.cpp  cost_of_balloons.h  tests.cpp
sources/count_divisors/: count_divisors.cpp  count_divisors.h  tests.cpp
sources/dislikes_and_party/: dislikes_and_party.cpp  dislikes_and_party.h  tests.cpp
sources/duration/: duration.cpp  duration.h  tests.cpp
sources/e_maze_in/: e_maze_in.cpp  e_maze_in.h  tests.cpp
sources/factorial/: factorial.cpp  factorial.h  tests.cpp
sources/find_product/: find_product.cpp  find_product.h  tests.cpp
sources/friends_relationship/: friends_relationship.cpp  friends_relationship.h  tests.cpp
sources/hello/: tests.cpp
sources/is_unique/: README.md  is_unique.cpp  is_unique.h  tests.cpp
sources/lift_queries/: lift_queries.cpp  lift_queries.h  tests.cpp
sources/matrix_determinant/: matrix_determinant.cpp  matrix_determinant.h  tests.cpp
sources/merge_sort/: merge_sort.h  (+2 more)
(+56 files in other folders)
